--- a/advent-haskell.cabal
+++ b/advent-haskell.cabal
@@ -33,6 +33,7 @@ library
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -46,12 +47,13 @@ library
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -60,12 +62,79 @@ library
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
+    , vector
+    , witherable
+  default-language: Haskell2010
+
+executable advent-2023-1
+  main-is: Main.hs
+  other-modules:
+      Advent
+      Array2D
+      Binary
+      Braille
+      Facing
+      Graph
+      Interval
+      Parsers
+      Point
+      Range
+      Rotation
+      Zipper
+      Paths_advent_haskell
+  hs-source-dirs:
+      src/
+      app/2023/Day1/
+  default-extensions:
+      FlexibleContexts
+      DeriveFunctor
+      DeriveFoldable
+      DeriveTraversable
+      DeriveGeneric
+      TypeFamilies
+      FlexibleInstances
+      MultiWayIf
+      LambdaCase
+      MultiParamTypeClasses
+      TemplateHaskell
+      TupleSections
+      ScopedTypeVariables
+      TypeOperators
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -main-is Main
+  build-depends:
+      algebraic-graphs
+    , array
+    , base >=4.19 && <5
+    , comonad
+    , containers
+    , data-fix
+    , free
+    , ghc
+    , hashable
+    , indexed-traversable
+    , lens
+    , matrix
+    , megaparsec
+    , monad-memo
+    , mtl
+    , multiset
+    , parser-combinators
+    , pqueue
+    , recursion-schemes
+    , sbv
+    , semialign
+    , split
+    , these
+    , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -94,6 +163,7 @@ executable advent-2023-2
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -107,12 +177,13 @@ executable advent-2023-2
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -121,12 +192,14 @@ executable advent-2023-2
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -155,6 +228,7 @@ executable advent-2023-24
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -168,12 +242,13 @@ executable advent-2023-24
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -182,12 +257,14 @@ executable advent-2023-24
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -216,6 +293,7 @@ executable advent-2024-1
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -229,12 +307,13 @@ executable advent-2024-1
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -243,12 +322,14 @@ executable advent-2024-1
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -277,6 +358,7 @@ executable advent-2024-10
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -290,12 +372,13 @@ executable advent-2024-10
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -304,12 +387,14 @@ executable advent-2024-10
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -338,6 +423,7 @@ executable advent-2024-11
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -351,12 +437,13 @@ executable advent-2024-11
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -365,12 +452,14 @@ executable advent-2024-11
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -399,6 +488,7 @@ executable advent-2024-14
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -412,12 +502,13 @@ executable advent-2024-14
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -426,12 +517,14 @@ executable advent-2024-14
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -460,6 +553,7 @@ executable advent-2024-15
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -473,12 +567,13 @@ executable advent-2024-15
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -487,12 +582,14 @@ executable advent-2024-15
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -521,6 +618,7 @@ executable advent-2024-16
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -534,12 +632,13 @@ executable advent-2024-16
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -548,12 +647,79 @@ executable advent-2024-16
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
+    , vector
+    , witherable
+  default-language: Haskell2010
+
+executable advent-2024-17
+  main-is: Main.hs
+  other-modules:
+      Advent
+      Array2D
+      Binary
+      Braille
+      Facing
+      Graph
+      Interval
+      Parsers
+      Point
+      Range
+      Rotation
+      Zipper
+      Paths_advent_haskell
+  hs-source-dirs:
+      src/
+      app/2024/Day17/
+  default-extensions:
+      FlexibleContexts
+      DeriveFunctor
+      DeriveFoldable
+      DeriveTraversable
+      DeriveGeneric
+      TypeFamilies
+      FlexibleInstances
+      MultiWayIf
+      LambdaCase
+      MultiParamTypeClasses
+      TemplateHaskell
+      TupleSections
+      ScopedTypeVariables
+      TypeOperators
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -main-is Main
+  build-depends:
+      algebraic-graphs
+    , array
+    , base >=4.19 && <5
+    , comonad
+    , containers
+    , data-fix
+    , free
+    , ghc
+    , hashable
+    , indexed-traversable
+    , lens
+    , matrix
+    , megaparsec
+    , monad-memo
+    , mtl
+    , multiset
+    , parser-combinators
+    , pqueue
+    , recursion-schemes
+    , sbv
+    , semialign
+    , split
+    , these
+    , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -582,6 +748,7 @@ executable advent-2024-2
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -595,12 +762,13 @@ executable advent-2024-2
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -609,12 +777,14 @@ executable advent-2024-2
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -643,6 +813,7 @@ executable advent-2024-3
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -656,12 +827,13 @@ executable advent-2024-3
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -670,12 +842,14 @@ executable advent-2024-3
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -704,6 +878,7 @@ executable advent-2024-4
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -717,12 +892,13 @@ executable advent-2024-4
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -731,12 +907,14 @@ executable advent-2024-4
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -765,6 +943,7 @@ executable advent-2024-5
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -778,12 +957,13 @@ executable advent-2024-5
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -792,12 +972,14 @@ executable advent-2024-5
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -826,6 +1008,7 @@ executable advent-2024-6
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -839,12 +1022,13 @@ executable advent-2024-6
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -853,12 +1037,14 @@ executable advent-2024-6
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -887,6 +1073,7 @@ executable advent-2024-7
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -900,12 +1087,13 @@ executable advent-2024-7
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -914,12 +1102,14 @@ executable advent-2024-7
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -948,6 +1138,7 @@ executable advent-2024-8
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -961,12 +1152,13 @@ executable advent-2024-8
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -975,12 +1167,14 @@ executable advent-2024-8
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
@@ -1009,6 +1203,7 @@ executable advent-2024-9
       DeriveFunctor
       DeriveFoldable
       DeriveTraversable
+      DeriveGeneric
       TypeFamilies
       FlexibleInstances
       MultiWayIf
@@ -1022,12 +1217,13 @@ executable advent-2024-9
   build-depends:
       algebraic-graphs
     , array
-    , base >=4.7 && <5
+    , base >=4.19 && <5
     , comonad
     , containers
     , data-fix
     , free
     , ghc
+    , hashable
     , indexed-traversable
     , lens
     , matrix
@@ -1036,12 +1232,14 @@ executable advent-2024-9
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , recursion-schemes
     , sbv
     , semialign
     , split
     , these
     , transformers
+    , unordered-containers
     , vector
     , witherable
   default-language: Haskell2010
