--- a/advent-haskell.cabal
+++ b/advent-haskell.cabal
@@ -470,6 +470,72 @@ executable advent-2024-11
     , witherable
   default-language: Haskell2010
 
+executable advent-2024-12
+  main-is: Main.hs
+  other-modules:
+      Advent
+      Advent.Solution
+      Array2D
+      Binary
+      Braille
+      Facing
+      Graph
+      Interval
+      Parsers
+      Point
+      Range
+      Rotation
+      Zipper
+      Paths_advent_haskell
+  hs-source-dirs:
+      src/
+      app/2024/Day12/
+  default-extensions:
+      FlexibleContexts
+      DeriveFunctor
+      DeriveFoldable
+      DeriveTraversable
+      DeriveGeneric
+      TypeFamilies
+      FlexibleInstances
+      MultiWayIf
+      LambdaCase
+      MultiParamTypeClasses
+      TemplateHaskell
+      TupleSections
+      ScopedTypeVariables
+      TypeOperators
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -main-is Main
+  build-depends:
+      algebraic-graphs
+    , array
+    , base >=4.19 && <5
+    , comonad
+    , containers
+    , data-fix
+    , free
+    , ghc
+    , hashable
+    , indexed-traversable
+    , lens
+    , matrix
+    , megaparsec
+    , monad-memo
+    , mtl
+    , multiset
+    , parser-combinators
+    , pqueue
+    , recursion-schemes
+    , sbv
+    , semialign
+    , split
+    , these
+    , transformers
+    , unordered-containers
+    , vector
+    , witherable
+  default-language: Haskell2010
+
 executable advent-2024-14
   main-is: Main.hs
   other-modules:
@@ -688,6 +754,138 @@ executable advent-2024-17
   hs-source-dirs:
       src/
       app/2024/Day17/
+  default-extensions:
+      FlexibleContexts
+      DeriveFunctor
+      DeriveFoldable
+      DeriveTraversable
+      DeriveGeneric
+      TypeFamilies
+      FlexibleInstances
+      MultiWayIf
+      LambdaCase
+      MultiParamTypeClasses
+      TemplateHaskell
+      TupleSections
+      ScopedTypeVariables
+      TypeOperators
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -main-is Main
+  build-depends:
+      algebraic-graphs
+    , array
+    , base >=4.19 && <5
+    , comonad
+    , containers
+    , data-fix
+    , free
+    , ghc
+    , hashable
+    , indexed-traversable
+    , lens
+    , matrix
+    , megaparsec
+    , monad-memo
+    , mtl
+    , multiset
+    , parser-combinators
+    , pqueue
+    , recursion-schemes
+    , sbv
+    , semialign
+    , split
+    , these
+    , transformers
+    , unordered-containers
+    , vector
+    , witherable
+  default-language: Haskell2010
+
+executable advent-2024-18
+  main-is: Main.hs
+  other-modules:
+      Advent
+      Advent.Solution
+      Array2D
+      Binary
+      Braille
+      Facing
+      Graph
+      Interval
+      Parsers
+      Point
+      Range
+      Rotation
+      Zipper
+      Paths_advent_haskell
+  hs-source-dirs:
+      src/
+      app/2024/Day18/
+  default-extensions:
+      FlexibleContexts
+      DeriveFunctor
+      DeriveFoldable
+      DeriveTraversable
+      DeriveGeneric
+      TypeFamilies
+      FlexibleInstances
+      MultiWayIf
+      LambdaCase
+      MultiParamTypeClasses
+      TemplateHaskell
+      TupleSections
+      ScopedTypeVariables
+      TypeOperators
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -main-is Main
+  build-depends:
+      algebraic-graphs
+    , array
+    , base >=4.19 && <5
+    , comonad
+    , containers
+    , data-fix
+    , free
+    , ghc
+    , hashable
+    , indexed-traversable
+    , lens
+    , matrix
+    , megaparsec
+    , monad-memo
+    , mtl
+    , multiset
+    , parser-combinators
+    , pqueue
+    , recursion-schemes
+    , sbv
+    , semialign
+    , split
+    , these
+    , transformers
+    , unordered-containers
+    , vector
+    , witherable
+  default-language: Haskell2010
+
+executable advent-2024-19
+  main-is: Main.hs
+  other-modules:
+      Advent
+      Advent.Solution
+      Array2D
+      Binary
+      Braille
+      Facing
+      Graph
+      Interval
+      Parsers
+      Point
+      Range
+      Rotation
+      Zipper
+      Paths_advent_haskell
+  hs-source-dirs:
+      src/
+      app/2024/Day19/
   default-extensions:
       FlexibleContexts
       DeriveFunctor
